cluster/vaultwarden/_namespace.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/namespace-v1.json

apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
